[tool.poetry]
name = "data-structures-project"
version = "0.1.0"
description = ""
authors = ["Ilya Evlanov <ilya.evlanov@gmail.com>"]
readme = "README.md"
packages = [{include = "data_structures_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
